--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghostify-premium-mvp-v3",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
   "dependencies": {
@@ -13,6 +13,11 @@
     "postcss": "8.4.38",
     "tailwindcss": "3.4.7",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
-  }
+    "eslint-config-next": "14.2.5",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "typescript": "5.2.2"
+  },
+  "engines": { "node": "18.x" }
 }
