--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "ghostify-premium-mvp-v3",
   "version": "1.0.1",
   "private": true,
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.2.0",
@@ -19,5 +23,7 @@
     "@types/react-dom": "18.2.7",
     "typescript": "5.2.2"
   },
-  "engines": { "node": "18.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
