--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-  "build": "next build",
-  "start": "next start"
-}
-
-  },
-  "engines": {
-    "node": ">=18 <=20"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "next-auth": "^4.24.7"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
