--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
+  "framework": "nextjs",
   "buildCommand": "next build",
-  "outputDirectory": ".next",
-  "framework": "nextjs"
+  "outputDirectory": ".next"
 }
+
