--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=ghostify-core
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=ghostify-core.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=311435609935
 NEXT_PUBLIC_FIREBASE_APP_ID=1:311435609935:web:2493c7a97ecd97bac9673a
-NEXT_PUBLIC_INVITE_CODE=CODE1,CODE2
+NEXT_PUBLIC_INVITE_CODE=GHOST-ALPHA-777
