--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=ghostify-core.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=311435609935
 NEXT_PUBLIC_FIREBASE_APP_ID=1:311435609935:web:2493c7a97ecd97bac9673a
 NEXT_PUBLIC_INVITE_CODE=GHOST-ALPHA-777
+HIBP_API_KEY=82497efdc6e9499f9a4505f1856fcee0
