--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghostify-v4",
+  "name": "ghostify-v5",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,10 @@
     "firebase": "^11.0.0",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "pdf-lib": "^1.17.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
