--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "resend": "^3.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
