--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0"
     "resend": "^3.3.0"
   },
   "engines": {
