--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghostify-v5",
+  "name": "ghostify-ui",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,15 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^11.0.0",
     "next": "14.2.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "pdf-lib": "^1.17.1",
-    "pdfkit": "^0.13.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "^10.7.0",
+    "pdfkit": "^0.13.0",
     "resend": "^3.3.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
